Finished reviews and added unit tests